--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         <div class="row">
             <div>
                 <h1>Google</h1>
-                <img src="C:\Users\Doddi Naveen\Downloads\search.svg" alt="search.svg">
+                <img src="search.svg" alt="search.svg">
                 <input id="input" placeholder="Search Google or type a URL">
-                <img src="C:\Users\Doddi Naveen\Downloads\googlemic_clr_24px.svg" alt="voice.svg">
+                <img src="mic.svg" alt="voice.svg">
                 <p id="para" style="font-size: large;"></p>
                 <div class="btn-group">
                     <a href="https://github.com/NaveenDoddi" target="_blank"><div class="col-xs-6 col-sm-4 col-md-3 col-lg-2 bg-info" id="bookmaarks">github</div></a>
